# experiments-with-RAG

./: .gitignore  L1-student.md  README.md  embedding_adaptor_experiment.ipynb  embedding_adaptor_results_20250929_153212.csv  main.py  pyproject.toml  tcs_adaptor_matrix.pth  tcs_annual_report.md  tcs_rag.py  tcs_rag_evaluation.ipynb  tcs_rag_evaluation_20250927_214934.csv  tcs_rag_evaluation_20250928_162310.csv  tcs_rag_notebook.ipynb
